initial setup of website

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -65,5 +65,5 @@
   "bugs": {
     "url": "https://github.com/simplePCBuilding/myevent/issues"
   },
-  "homepage": "https://github.com/simplePCBuilding/myevent#readme"
+  "homepage": "https://myevent.janishutz.com"
 }
