seatplan prep + lang prep

--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -10,7 +10,8 @@
     "core-js": "^3.8.3",
     "pinia": "^2.0.34",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-draggable-resizable": "^1.6.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
