--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #
-#				myevent - .gitignore
+#				libreevent - .gitignore
 #
 #	Created by Janis Hutz 02/26/2023, Licensed under the GPL V3 License
 #			https://janishutz.com, development@janishutz.com
