--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myevent",
+  "name": "libreevent",
   "version": "1.0.0",
   "description": "A free and open source event management solution",
   "main": "/dist/app.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/simplePCBuilding/myevent.git"
+    "url": "git+https://github.com/simplePCBuilding/libreevent.git"
   },
   "keywords": [
     "eventmanager",
@@ -18,7 +18,7 @@
   "author": "Janis Hutz",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/simplePCBuilding/myevent/issues"
+    "url": "https://github.com/simplePCBuilding/libreevent/issues"
   },
-  "homepage": "https://myevent.janishutz.com"
+  "homepage": "https://libreevent.janishutz.com"
 }
