--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myevent",
+  "name": "libreevent",
   "version": "1.0.0",
   "description": "Free & Open source event management solution",
   "main": "app.js",
@@ -54,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/simplePCBuilding/myevent.git"
+    "url": "git+https://github.com/simplePCBuilding/libreevent.git"
   },
   "keywords": [
     "event",
@@ -64,7 +64,7 @@
   "author": "Janis Hutz",
   "license": "GPL-3.0-or-later",
   "bugs": {
-    "url": "https://github.com/simplePCBuilding/myevent/issues"
+    "url": "https://github.com/simplePCBuilding/libreevent/issues"
   },
-  "homepage": "https://myevent.janishutz.com"
+  "homepage": "https://libreevent.janishutz.com"
 }
