--- a/src/server/package.json
+++ b/src/server/package.json
@@ -46,6 +46,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "promise-mysql": "^5.2.0",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.15.0"
   },
