--- a/src/server/package.json
+++ b/src/server/package.json
@@ -47,8 +47,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "html-to-text": "^9.0.5",
+    "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
-    "promise-mysql": "^5.2.0",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.15.0"
   },
