--- a/src/server/package.json
+++ b/src/server/package.json
@@ -31,6 +31,7 @@
     "path-exists": "^5.0.0",
     "readjson": "^2.2.2",
     "relateurl": "^0.2.7",
+    "response-time": "^2.3.2",
     "simport": "^1.2.0",
     "source-map": "^0.6.1",
     "source-map-support": "^0.5.21",
