--- a/src/server/package.json
+++ b/src/server/package.json
@@ -42,6 +42,7 @@
     "yocto-queue": "^1.0.0"
   },
   "dependencies": {
+    "@seald-io/nedb": "^4.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
