--- a/src/server/package.json
+++ b/src/server/package.json
@@ -53,7 +53,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "serve-favicon": "^2.5.0",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "stripe": "^12.14.0"
   },
   "scripts": {
     "test": "test.js"
