various small changes + almost complete ticket gen

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -3,5 +3,6 @@
     "twoFA": "enhanced",
     "db": "mysql",
     "payments": "stripe",
+    "name": "libreevent",
     "yourDomain": "http://localhost:8081"
 }
