working 2fa system

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -4,5 +4,6 @@
     "db": "mysql",
     "payments": "stripe",
     "name": "libreevent",
-    "yourDomain": "http://localhost:8081"
+    "yourDomain": "http://localhost:8081",
+    "mailSender": "libreevent <info@libreevent.janishutz.com>"
 }
