sign up almost fully working

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -1,6 +1,7 @@
 {
     "init": true,
-    "twoFA": "enhanced",
+    "twoFA": "allow",
+    "twoFAMode": "enhanced",
     "db": "mysql",
     "payments": "stripe",
     "name": "libreevent",
