--- a/src/server/package.json
+++ b/src/server/package.json
@@ -52,6 +52,7 @@
     "html-to-text": "^9.0.5",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
+    "pdf-lib": "^1.17.1",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.15.0",
     "stripe": "^12.14.0",
