prepare to redo ticket selection api

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -6,5 +6,6 @@
     "payments": "stripe",
     "name": "libreevent",
     "yourDomain": "http://localhost:8080",
-    "mailSender": "libreevent <info@libreevent.janishutz.com>"
+    "mailSender": "libreevent <info@libreevent.janishutz.com>",
+    "maxTickets": 3
 }
