--- a/src/server/package.json
+++ b/src/server/package.json
@@ -50,6 +50,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "html-to-text": "^9.0.5",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "pdf-lib": "^1.17.1",
