clean up settings of event and general ones

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -8,5 +8,6 @@
     "name": "libreevent",
     "yourDomain": "http://localhost:8080",
     "mailSender": "libreevent <info@libreevent.janishutz.com>",
-    "maxTickets": 10
+    "maxTickets": 10,
+    "currency": "USD"
 }
