fix some things with event loading

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -9,5 +9,5 @@
     "yourDomain": "http://localhost:8080",
     "mailSender": "libreevent <info@libreevent.janishutz.com>",
     "maxTickets": 10,
-    "currency": "USD"
+    "currency": "CHF"
 }
