add payrexx as payment provider

--- a/src/server/config/payments.config.json
+++ b/src/server/config/payments.config.json
@@ -1,5 +1,11 @@
 {
     "stripe": {
-        "APIKey": ""
+        "APIKey": "",
+        "endpointSecret": ""
+    },
+    "payrexx": {
+        "APISecret": "",
+        "instance": "",
+        "pm": []
     }
 }
