--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -4,7 +4,7 @@
     "setupKey": "hello world",
     "twoFAMode": "enhanced",
     "db": "mysql",
-    "payments": "stripe",
+    "payments": "payrexx",
     "name": "libreevent",
     "yourDomain": "http://localhost:8080",
     "mailSender": "libreevent <info@libreevent.janishutz.com>",
