--- a/src/server/package.json
+++ b/src/server/package.json
@@ -44,9 +44,11 @@
   "dependencies": {
     "@pdfme/generator": "^1.2.6",
     "@seald-io/nedb": "^4.0.2",
+    "axios": "^1.4.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "html-to-text": "^9.0.5",
@@ -54,6 +56,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "pdf-lib": "^1.17.1",
+    "qs": "^6.11.2",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.15.0",
     "stripe": "^12.14.0",
