--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -1,1 +1,15 @@
-{"init":true,"twoFA":"enforce","setupKey":"hello world","twoFAMode":"enhanced","db":"json","payments":"stripe","name":"libreevent","yourDomain":"http://localhost:8080","mailSender":"libreevent <info@libreevent.janishutz.com>","maxTickets":10,"currency":"CHF"}
+{
+    "init":true,
+    "twoFA":"enforce",
+    "setupKey":"hello world",
+    "twoFAMode":"enhanced",
+    "db":"json",
+    "payments":"stripe",
+    "name":"libreevent",
+    "yourDomain":"http://localhost:8080",
+    "mailSender":"libreevent <info@libreevent.janishutz.com>",
+    "maxTickets":10,
+    "currency":"CHF",
+    "gcInterval": "600",
+    "ticketTimeout": "900"
+}
