prepare payment gateway settings

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -11,5 +11,6 @@
 	"maxTickets":10,
 	"currency":"CHF",
 	"gcInterval":300,
-	"ticketTimeout":900
+	"ticketTimeout":900,
+	"startPage": "default"
 }
