setup app complete

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -1,17 +1,17 @@
 {
-    "init":false,
-    "setupDone": true,
-    "twoFA":"enforce",
-    "twoFAMode":"enhanced",
-    "db":"mysql",
-    "payments":"stripe",
-    "name":"libreevent",
-    "yourDomain":"http://localhost:8080",
-    "mailSender":"libreevent <info@libreevent.janishutz.com>",
-    "maxTickets":10,
-    "currency":"CHF",
-    "gcInterval":300,
-    "ticketTimeout":900,
-    "startPage":"default",
-    "version":"1.0.0"
+	"init":true,
+	"setupDone":true,
+	"twoFA":"enforce",
+	"twoFAMode":"enhanced",
+	"db":"mysql",
+	"payments":"stripe",
+	"name":"libreevent",
+	"yourDomain":"http://localhost:8080",
+	"mailSender":"libreevent <no-reply@libreevent.janishutz.com>",
+	"maxTickets":10,
+	"currency":"CHF",
+	"gcInterval":300,
+	"ticketTimeout":900,
+	"startPage":"default",
+	"version":"1.0.0"
 }
