--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -3,7 +3,7 @@
 	"setupDone":true,
 	"twoFA":"enforce",
 	"twoFAMode":"enhanced",
-	"db":"mysql",
+	"db":"json",
 	"payments":"stripe",
 	"name":"libreevent",
 	"yourDomain":"http://localhost:8080",
