start work on newsletter plugin

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -3,8 +3,8 @@
 	"setupDone":true,
 	"twoFA":"enforce",
 	"twoFAMode":"enhanced",
-	"db":"json",
-	"payments":"payrexx",
+	"db":"mysql",
+	"payments":"stripe",
 	"name":"libreevent",
 	"yourDomain":"http://localhost:8080",
 	"mailSender":"libreevent <no-reply@libreevent.janishutz.com>",
