android app progress + polls plugin

--- a/src/apps/Android/app/src/main/AndroidManifest.xml
+++ b/src/apps/Android/app/src/main/AndroidManifest.xml
@@ -22,5 +22,7 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA" />
 </manifest>
