--- a/src/webapp/main/package.json
+++ b/src/webapp/main/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite --host",
     "preview": "vite preview --host",
-    "build": "vite build"
+    "build": "vite build",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
     "@pdfme/generator": "^1.2.3",
@@ -18,6 +19,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.10.2",
-    "vite": "^2.5.4"
+    "vite": "^2.5.4",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vue": "^9.17.0"
   }
 }
