add linting to server folder

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -63,7 +63,7 @@
     "vue": "^3.3.4"
   },
   "scripts": {
-    "test": "test.js"
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "repository": {
     "type": "git",
