--- a/src/apps/Android/app/src/main/AndroidManifest.xml
+++ b/src/apps/Android/app/src/main/AndroidManifest.xml
@@ -29,4 +29,5 @@
     <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
