--- a/src/server/package.json
+++ b/src/server/package.json
@@ -56,6 +56,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.9.3",
     "pdf-lib": "^1.17.1",
+    "png-to-ico": "^2.1.8",
     "qs": "^6.11.2",
     "serve-favicon": "^2.5.0",
     "serve-static": "^1.15.0",
