reset database, update imports, prepare for build

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -1,17 +1,17 @@
 {
-	"init":true,
-	"setupDone":true,
-	"twoFA":"enforce",
-	"twoFAMode":"enhanced",
+	"init":false,
+	"setupDone":false,
+	"twoFA":"allow",
+	"twoFAMode":"simple",
 	"db":"mysql",
 	"payments":"stripe",
 	"name":"libreevent",
-	"yourDomain":"http://localhost:8080",
-	"mailSender":"libreevent <no-reply@libreevent.janishutz.com>",
+	"yourDomain":"",
+	"mailSender":"",
 	"maxTickets":10,
-	"currency":"CHF",
+	"currency":"USD",
 	"gcInterval":300,
 	"ticketTimeout":900,
-	"startPage":"modern",
+	"startPage":"default",
 	"version":"1.0.0"
 }
