add config files back for testing

--- a/src/server/config/settings.config.json
+++ b/src/server/config/settings.config.json
@@ -1,17 +1,17 @@
 {
-	"init":false,
-	"setupDone":false,
-	"twoFA":"allow",
-	"twoFAMode":"simple",
+	"init":true,
+	"setupDone":true,
+	"twoFA":"enforce",
+	"twoFAMode":"enhanced",
 	"db":"mysql",
 	"payments":"stripe",
 	"name":"libreevent",
-	"yourDomain":"",
-	"mailSender":"",
+	"yourDomain":"http://localhost:8080",
+	"mailSender":"libreevent <no-reply@libreevent.janishutz.com>",
 	"maxTickets":10,
-	"currency":"USD",
+	"currency":"CHF",
 	"gcInterval":300,
 	"ticketTimeout":900,
-	"startPage":"default",
+	"startPage":"modern",
 	"version":"1.0.0"
 }
