--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,8 +1,8 @@
 {
   "name": "libreevent",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Free & Open source event management solution",
-  "main": "app.js",
+  "main": "index.js",
   "directories": {
     "doc": "docs"
   },
